# auth-service

./: .env.template  Dockerfile  README.md  justfile  pyproject.toml
migrations/: env.py
migrations/versions/: 2026_02_04_2158-c87402dfedf7_init_migration.py  2026_02_10_2334-1bc09d359200_add_timestamps_to_users.py
src/: main.py
src/core/: config.py  dependencies.py  exceptions.py  logging_config.py  security.py  utils.py
src/core/schemas/: user.py
src/db/: __init__.py
src/db/models/: user.py
src/grpc_apps/: auth_server.py
src/interfaces/api/: auth_routes.py  user_routes.py
src/interfaces/grpc/: auth_server.py
src/services/: auth_service.py  token_service.py  user_service.py
src/services/auth/: __init__.py  auth_service.py
